# rust-cid

./: CHANGELOG.md  Cargo.toml  README.md  aliases.js  rust-toolchain.toml  search-index.js  settings.html  source-files.js
.github/workflows/: build.yml
cid/: all.html  enum.Codec.html  enum.Error.html  enum.Version.html  index.html  sidebar-items.js  struct.Cid.html  struct.Prefix.html  trait.ToCid.html  type.Result.html
cid/codec/: enum.Codec.html
cid/to_cid/: trait.ToCid.html
cli/: Cargo.toml  main.rs
examples/: readme.rs
implementors/cid/: trait.ToCid.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js  trait.Send.js  trait.Sync.js
implementors/core/str/: trait.FromStr.js
implementors/std/error/: trait.Error.js
src/: arb.rs  cbor.rs  cid.rs  codec.rs  compat_0_10.rs  compat_0_9.rs  error.rs  lib.rs  prefix.rs  serde.rs  to_cid.rs  version.rs
src/cid/: codec.rs.html  error.rs.html  lib.rs.html  to_cid.rs.html  version.rs.html
src/serde/: ipld_dag_cbor.rs  ipld_dag_json.rs  mod.rs
tests/: lib.rs
