[package]
name = "cid"
version = "0.6.0"
description = "CID in rust"
homepage = "https://github.com/multiformats/rust-cid"
authors = ["Friedel Ziegelmayer <dignifiedquire@gmail.com>"]
keywords = ["ipld", "ipfs", "cid", "multihash", "multiformats"]
license = "MIT"
readme = "README.md"
edition = "2018"

[package.metadata.release]
pre-release-commit-message = "Release {{version}} 🎉🎉"
no-dev-version = true

[features]
default = ["std", "multihash/default"]
std = ["multibase", "multihash/std", "unsigned-varint/std"]
arb = ["quickcheck", "rand", "multihash/arb"]
scale-codec = ["parity-scale-codec", "multihash/scale-codec"]
serde-codec = ["serde", "multihash/serde-codec"]

[dependencies]
multihash = { version = "0.13.1", default-features = false }
unsigned-varint = { version = "0.5.1", default-features = false }

multibase = { version = "0.8.0", optional = true }
parity-scale-codec = { version = "1.3.5", optional = true, default-features = false, features = ["derive"] }
quickcheck = { version = "0.9.2", optional = true }
rand = { version = "0.7.3", optional = true }
serde = { version = "1.0.116", optional = true }

[dev-dependencies]
multihash = { version = "0.13.1", default-features = false, features = ["arb"] }
quickcheck = "0.9.2"
rand = "0.7.3"
serde_json = "1.0.59"
