[package]
name = "cid"
version = "0.7.0"
description = "CID in rust"
homepage = "https://github.com/multiformats/rust-cid"
authors = ["Friedel Ziegelmayer <dignifiedquire@gmail.com>"]
keywords = ["ipld", "ipfs", "cid", "multihash", "multiformats"]
license = "MIT"
readme = "README.md"
edition = "2018"

[package.metadata.release]
pre-release-commit-message = "Release {{version}} 🎉🎉"
no-dev-version = true

[features]
default = ["std", "multihash/default"]
std = ["multibase", "multihash/std", "unsigned-varint/std"]
arb = ["quickcheck", "rand", "multihash/arb"]
scale-codec = ["parity-scale-codec", "multihash/scale-codec"]
serde-codec = ["serde", "multihash/serde-codec"]

[dependencies]
multihash = { version = "0.15.0", default-features = false }
unsigned-varint = { version = "0.7.0", default-features = false }

multibase = { version = "0.9.1", optional = true }
parity-scale-codec = { version = "2.1.1", default-features = false, features = ["derive"], optional = true }
quickcheck = { version = "0.9.2", optional = true }
rand = { version = "0.7.3", optional = true }
serde = { version = "1.0.116", optional = true }

[dev-dependencies]
serde_json = "1.0.59"
