[package]
name = "cid"
version = "0.7.0"
description = "CID in rust"
homepage = "https://github.com/multiformats/rust-cid"
authors = ["Friedel Ziegelmayer <dignifiedquire@gmail.com>"]
keywords = ["ipld", "ipfs", "cid", "multihash", "multiformats"]
license = "MIT"
readme = "README.md"
edition = "2018"

[package.metadata.release]
pre-release-commit-message = "Release {{version}} 🎉🎉"
no-dev-version = true

[features]
default = ["std", "multihash/default"]
std = ["multihash/std", "unsigned-varint/std", "alloc", "multibase/std"]
alloc = ["multibase", "multihash/alloc"]
arb = ["quickcheck", "rand", "multihash/arb"]
scale-codec = ["parity-scale-codec", "multihash/scale-codec"]
serde-codec = ["serde", "multihash/serde-codec", "serde_bytes"]

[dependencies]
multihash = { version = "0.16.0", default-features = false }
unsigned-varint = { version = "0.7.0", default-features = false }

multibase = { version = "0.9.1", optional = true, default-features = false }
parity-scale-codec = { version = "2.1.1", default-features = false, features = ["derive"], optional = true }
quickcheck = { version = "0.9.2", optional = true }
rand = { version = "0.7.3", optional = true }
serde = { version = "1.0.116", optional = true }
serde_bytes = { version = "0.11.5", optional = true }

core2 = { version = "0.4", default-features = false, features = ["alloc"] }

[dev-dependencies]
serde_json = "1.0.59"
