[package]
name = "cli"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "0.99.4"
cid = { path = ".." }
clap = "2.33.0"
env_logger = "0.6.2"
exitfailure = "0.5.1"
failure = "0.1.5"
log = "0.4.8"
multibase = "0.6.0"
multihash = { git = "https://github.com/dvc94ch/rust-multihash", branch = "cli" }
structopt = "0.3.0"

[[bin]]
name = "cid"
path = "main.rs"
